feat(native_windows,build,docs): add native MSVC build system, Win32 File device, and VS Code integration
Introduce a full Windows-native workflow and developer experience.

- build(windows): add top-level `Makefile.mak` for MSVC/nmake
  - targets: all, setup, install-sdl2, clean/clean-all, test, test-gui
  - auto-installs vcpkg; links SDL2 when available
  - rules to assemble `.tal` into `.rom` and create test ROMs
  - GUI build requires SDL2 via vcpkg; fails with clear error if missing

- feat(file): implement Win32 file device (`src/devices/file_win.c`)
  - Uses Win32 APIs + MSVCRT for file/dir ops
  - Safe 16-bit POKE macro, sandbox check, stat/list/delete
  - Directory iteration via `FindFirstFile/FindNextFile`

- fix(windows): make `uxnemu.c` portable on Windows
  - Provide `_read/_close` shims and include guards

- build(devx): add VS Code config for seamless workflows
  - `.vscode/tasks.json`: build/run/test tasks (nmake)
  - `.vscode/launch.json`: debuggers for asm/cli/gui
  - `.vscode/c_cpp_properties.json`: IntelliSense include paths
  - `.vscode/settings.json`: Makefile Tools integration

- build(deps): declare `vcpkg.json` with `sdl2` dependency

- docs(windows): add `README_Windows.md` and link from main README
  - Quick start (`nmake /f Makefile.mak setup && nmake /f Makefile.mak all`)
  - Troubleshooting, tasks, targets, examples

- chore(gitignore): ignore Windows artifacts, ROMs, and generated test files
  - `*.exe`, `*.obj`, `*.rom`, test-{cli,gui}.{tal,rom}, `vcpkg_installed/`

Notes:
- GUI build requires SDL2 via vcpkg; no fallback to stubs.
- No breaking changes for non-Windows builds.

Files:
- NEW: `.vscode/{tasks,launch,settings,c_cpp_properties}.json`
- NEW: `Makefile.mak`, `README_Windows.md`, `vcpkg.json`
- NEW: `src/devices/file_win.c`
- MOD: `.gitignore`, `README.md`, `src/uxnemu.c`

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,17 @@
 *.rom.sym
 
 *.[o0125678vqki]
+
+# Windows executables
+*.exe
+*.obj
+*.rom
+
+# Generated test files
+test-cli.tal
+test-cli.rom
+test-gui.tal
+test-gui.rom
+
+# vcpkg installed packages
+vcpkg_installed/
